argo/argocd/projects/homelab/kube-prometheus-stack/resources/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-internal 
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.pleejr.org`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: grafana
              secure: true
              sameSite: none
  tls:
    secretName: grafana-cert-prod
